@@ -7711,6 +7711,10 @@ character conversion activated ? & Y \\
 
 \hline
 
+\IdxPFD{show\_information} & \texttt{\underline{on}} / \texttt{off} & show informational messages ? & N \\
+
+\hline
+
 \IdxPFD{strict\_iso} & \texttt{\underline{on}} / \texttt{off} & strict ISO behavior ? & N \\
 
 \hline
