@@ -18,9 +18,9 @@ predicate('$top_level/0_$aux1'/0,44,static,private,monofile,local,[
     try_me_else(1),
     allocate(1),
     get_variable(y(0),0),
-    put_integer(15,0),
-    put_integer(0,1),
-    call('$sys_var_read'/2),
+    put_atom(show_information,0),
+    put_atom(on,1),
+    call(current_prolog_flag/2),
     cut(y(0)),
     put_atom(top_level_output,0),
     call('$banner'/1),
