@@ -1,11 +1,12 @@
+Wed Dec  7 11:19:16 AM CET 2022
+
+	* add --quiet option to top-level command-line (do not display banner and info)
+	* add Prolog flag show_information (on/off)
+
 Mon Dec  5 15:36:38 CET 2022 <Daniel.Diaz@univ-paris1.fr>
 
-	* add new prefedined stream aliases (current_input/output)
+	* add new prefedined stream aliases (current_input, current_output)
 	* add new built-in to reassign a stream alias (set_stream_alias/2)
-
-Thu Nov 17 17:30:01 CET 2022 <Daniel.Diaz@univ-paris1.fr>
-
-	* add --quiet option to top-level command-line (do not display banner)
 
 Wed Mar  9 17:41:41 CET 2022 <Daniel.Diaz@univ-paris1.fr>
 
